closes #216